--- a/estilos.css
+++ b/estilos.css
@@ -838,6 +838,21 @@ button:active {
   color: #999;
 }
 
+.anuncio {
+    width: 728px;
+    height: 120px;
+    border: none;
+    display: block;
+    margin: auto;
+}
+
+@media (max-width: 480px) {
+    .anuncio {
+        width: 300px;
+        height: 600px;
+    }
+}
+
 /*CONTENIDO*/
 
 .content {
@@ -944,6 +959,8 @@ button:active {
   .content-right img {
     width: 100%;
   }
+
+.content-right{overflow: hidden;}
 
   .content .content-left .info h2 {
     font-size: 222%;
