--- a/estilos.css
+++ b/estilos.css
@@ -762,6 +762,44 @@ button:active {
   transition: transform 0.3s ease;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+}
+
+.modal img {
+  max-width: 90%;
+  max-height: 80vh;
+}
+
+.modal:target {
+  display: flex;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 30px;
+  text-decoration: none;
+  color: #fff;
+}
+
 .footer {
   background-color: #111;
   color: #eee;
